--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="row justify-content-center mt-4">
           <div class="col-md-4 col-10 text-center">
-            <div class="card">
+            <div class="card fade-in fade-in-up">
               <img src="img/intro.jpg" class="card-img-top" alt="Introduction">
               <div class="card-body">
                 <p class="card-text">“Dan di antara tanda-tanda kekuasaan-Nya ialah Dia menciptakan untukmu istri-istri dari jenismu sendiri, supaya kamu cenderung dan merasa tentram kepadanya, dan dijadikan-Nya di antaramu rasa kasih dan sayang. Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda bagi kaum yang berpikir.”
@@ -88,22 +88,22 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
-            <span class="section-subtitle">We're Getting Married</span>
-            <h2>Acara Pernikahan</h2>
-            <div class="ornament ornament-green">
+            <span class="section-subtitle fade-in">We're Getting Married</span>
+            <h2 class="fade-in fade-in-delay-1">Acara Pernikahan</h2>
+            <div class="ornament ornament-green fade-in fade-in-delay-2">
               <span></span>
               <i class="bi bi-heart-fill"></i>
               <span></span>
             </div>
-            <h3>Diselenggarakan pada 28 Desember 2025 di Desa Citta, Kecamatan Citta, Kabupaten Soppeng.</h3>
-            <p>Oleh karena itu, dengan segala hormat kami bermaksud untuk mengundang Bapak/Ibu Saudara/i, untuk hadir pada pernikahan kami.</p>
+            <h3 class="fade-in fade-in-delay-3">Diselenggarakan pada 28 Desember 2025 di Desa Citta, Kecamatan Citta, Kabupaten Soppeng.</h3>
+            <p class="fade-in fade-in-delay-4">Oleh karena itu, dengan segala hormat kami bermaksud untuk mengundang Bapak/Ibu Saudara/i, untuk hadir pada pernikahan kami.</p>
           </div>
         </div>
       </div>
 
       <div class="row couple justify-content-center">
         <div class="col-lg-5 col-md-6 col-10">
-          <div class="couple-card">
+          <div class="couple-card fade-in fade-in-left">
             <div class="couple-img-wrapper">
               <img src="img/cowo.jpg" alt="Usman Sidiq">
             </div>
@@ -115,12 +115,12 @@
           </div>
         </div>
 
-        <div class="couple-heart">
+        <div class="couple-heart fade-in fade-in-scale">
           <i class="bi bi-suit-heart-fill"></i>
         </div>
 
         <div class="col-lg-5 col-md-6 col-10">
-          <div class="couple-card">
+          <div class="couple-card fade-in fade-in-right">
             <div class="couple-img-wrapper">
               <img src="img/cewe.jpg" alt="Nadhila Sari">
             </div>
@@ -137,15 +137,15 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span class="section-subtitle">Save The Date</span>
-            <h2>Informasi Acara</h2>
-            <div class="ornament ornament-light">
+            <span class="section-subtitle fade-in">Save The Date</span>
+            <h2 class="fade-in fade-in-delay-1">Informasi Acara</h2>
+            <div class="ornament ornament-light fade-in fade-in-delay-2">
               <span></span>
               <i class="bi bi-heart-fill"></i>
               <span></span>
             </div>
-            <p class="alamat">Kediaman Alm. Bapak H. Muhammad Zainuddin (Mantan Imam Kecamatan Citta), Sebelah Utara Pasar Citta, Desa Citta, Kecamatan Citta, Kabupaten Soppeng</p>
-            <div class="map-wrapper">
+            <p class="alamat fade-in fade-in-delay-3">Kediaman Alm. Bapak H. Muhammad Zainuddin (Mantan Imam Kecamatan Citta), Sebelah Utara Pasar Citta, Desa Citta, Kecamatan Citta, Kabupaten Soppeng</p>
+            <div class="map-wrapper fade-in fade-in-up">
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d994.4734439723935!2d120.0304849!3d-4.4308821!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dbe03942f7be319%3A0x2f3b55d002f5464!2sApotek%20Usman%20Farma!5e0!3m2!1sen!2sid!4v1765851216248!5m2!1sen!2sid" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <a href="https://maps.app.goo.gl/ML6s293aFaYwwWbD8" target="_blank" class="btn btn-outline-light btn-sm my-3"><i class="bi bi-geo-alt me-2"></i>Buka di Google Maps</a>
@@ -154,12 +154,12 @@
 
         <div class="row justify-content-center mt-5">
           <div class="content-divider"></div>
-          <div class="simply-countdown"> </div>
+          <div class="simply-countdown fade-in fade-in-scale"> </div>
           <div class="content-divider"></div>
         </div>
         <div class="row justify-content-center mt-5">
           <div class="col-lg-5 col-md-6 col-10">
-            <div class="event-card">
+            <div class="event-card fade-in fade-in-up">
               <div class="event-icon">
                 <i class="bi bi-heart"></i>
               </div>
@@ -185,19 +185,19 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span class="section-subtitle">Our Moments</span>
-            <h2>Galeri Foto</h2>
-            <div class="ornament ornament-green">
+            <span class="section-subtitle fade-in">Our Moments</span>
+            <h2 class="fade-in fade-in-delay-1">Galeri Foto</h2>
+            <div class="ornament ornament-green fade-in fade-in-delay-2">
               <span></span>
               <i class="bi bi-heart-fill"></i>
               <span></span>
             </div>
-            <p>Momen-momen indah perjalanan kisah cinta kami</p>
+            <p class="fade-in fade-in-delay-3">Momen-momen indah perjalanan kisah cinta kami</p>
           </div>
         </div>
 
         <div class="row row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center g-4 mt-2">
-          <div class="col">
+          <div class="col fade-in fade-in-up">
             <a href="img/gallery/1.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
               <img src="img/gallery/thumbnail/1.jpg" alt="Sidiq & Nana 1" class="img-fluid w-100">
               <div class="gallery-overlay">
@@ -205,7 +205,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col fade-in fade-in-up fade-in-delay-1">
             <a href="img/gallery/2.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
               <img src="img/gallery/thumbnail/2.jpg" alt="Sidiq & Nana 2" class="img-fluid w-100">
               <div class="gallery-overlay">
@@ -213,7 +213,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col fade-in fade-in-up fade-in-delay-2">
             <a href="img/gallery/3.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
               <img src="img/gallery/thumbnail/3.jpg" alt="Sidiq & Nana 3" class="img-fluid w-100">
               <div class="gallery-overlay">
@@ -221,7 +221,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col fade-in fade-in-up fade-in-delay-3">
             <a href="img/gallery/4.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
               <img src="img/gallery/thumbnail/4.jpg" alt="Sidiq & Nana 4" class="img-fluid w-100">
               <div class="gallery-overlay">
@@ -229,7 +229,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col fade-in fade-in-up fade-in-delay-4">
             <a href="img/gallery/5.avif" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
               <img src="img/gallery/thumbnail/5.jpg" alt="Sidiq & Nana 5" class="img-fluid w-100">
               <div class="gallery-overlay">
@@ -245,20 +245,20 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span class="section-subtitle">RSVP</span>
-            <h2>Konfirmasi Kehadiran</h2>
-            <div class="ornament ornament-light">
+            <span class="section-subtitle fade-in">RSVP</span>
+            <h2 class="fade-in fade-in-delay-1">Konfirmasi Kehadiran</h2>
+            <div class="ornament ornament-light fade-in fade-in-delay-2">
               <span></span>
               <i class="bi bi-heart-fill"></i>
               <span></span>
             </div>
-            <p>Merupakan suatu kehormatan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir pada acara pernikahan kami.</p>
+            <p class="fade-in fade-in-delay-3">Merupakan suatu kehormatan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir pada acara pernikahan kami.</p>
           </div>
         </div>
 
         <div class="row justify-content-center mt-4">
           <div class="col-lg-5 col-md-8 col-10">
-            <div class="rsvp-card">
+            <div class="rsvp-card fade-in fade-in-up">
               <form method="POST" action="https://script.google.com/macros/s/AKfycbz6y2FOusr0x_5SCS5Gnv1jJN7mOZaGHEU-qJz-JAiqoN7BjqdJUPWkzDNECH4oAq3_/exec" id="my-form">
                 <div class="mb-4">
                   <label for="nama" class="form-label">Nama Lengkap</label>
@@ -286,19 +286,19 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span class="section-subtitle">Wedding Gift</span>
-            <h2>Kirim Hadiah</h2>
-            <div class="ornament ornament-green">
+            <span class="section-subtitle fade-in">Wedding Gift</span>
+            <h2 class="fade-in fade-in-delay-1">Kirim Hadiah</h2>
+            <div class="ornament ornament-green fade-in fade-in-delay-2">
               <span></span>
               <i class="bi bi-heart-fill"></i>
               <span></span>
             </div>
-            <p>Tanpa mengurangi rasa hormat, bagi Anda yang ingin memberikan tanda kasih kepada kami, dapat melalui:</p>
+            <p class="fade-in fade-in-delay-3">Tanpa mengurangi rasa hormat, bagi Anda yang ingin memberikan tanda kasih kepada kami, dapat melalui:</p>
           </div>
         </div>
         <div class="row justify-content-center text-center g-4 mt-2">
           <div class="col-md-5 col-10">
-            <div class="gift-card">
+            <div class="gift-card fade-in fade-in-left">
               <div class="gift-icon">
                 <i class="bi bi-bank"></i>
               </div>
@@ -311,7 +311,7 @@
             </div>
           </div>
           <div class="col-md-5 col-10">
-            <div class="gift-card">
+            <div class="gift-card fade-in fade-in-right">
               <div class="gift-icon">
                 <i class="bi bi-bank"></i>
               </div>
@@ -327,9 +327,9 @@
 
         <div class="row justify-content-center mt-5 pt-4">
           <div class="col-md-8 col-10 text-center">
-            <span class="section-subtitle">Wishes</span>
-            <h2>Ucapan & Doa</h2>
-            <div class="ornament ornament-green">
+            <span class="section-subtitle fade-in">Wishes</span>
+            <h2 class="fade-in fade-in-delay-1">Ucapan & Doa</h2>
+            <div class="ornament ornament-green fade-in fade-in-delay-2">
               <span></span>
               <i class="bi bi-heart-fill"></i>
               <span></span>
@@ -339,7 +339,7 @@
 
         <div class="row justify-content-center mt-4">
           <div class="col-md-8 col-10">
-            <div class="wishes-card">
+            <div class="wishes-card fade-in fade-in-up">
               <!-- Comment Form -->
               <form id="wishes-form" class="wishes-form">
                 <div class="mb-3">
@@ -372,7 +372,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
-            <h3 class="footer-title">Sidiq & Nana</h3>
+            <h3 class="footer-title fade-in">Sidiq & Nana</h3>
             <p class="footer-quote">"Dan di antara tanda-tanda kekuasaan-Nya ialah Dia menciptakan untukmu pasangan hidup dari jenismu sendiri."</p>
             <div class="footer-divider"></div>
             <p class="footer-thanks">Terima kasih atas doa dan ucapan yang telah diberikan.</p>
@@ -550,9 +550,6 @@
 
       const namaInput = document.querySelector('#nama');
       if (namaInput) namaInput.value = name;
-
-      const wishNameInput = document.querySelector('#wish-name');
-      if (wishNameInput) wishNameInput.value = name;
     </script>
 
     <script>
@@ -575,6 +572,24 @@
       });
 
       observer.observe(heroSection);
+    </script>
+
+    <script>
+      // Fade-in animation on scroll
+      const fadeElements = document.querySelectorAll('.fade-in');
+
+      const fadeObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('visible');
+          }
+        });
+      }, {
+        threshold: 0.1,
+        rootMargin: '0px 0px -50px 0px'
+      });
+
+      fadeElements.forEach(el => fadeObserver.observe(el));
     </script>
 
     <script>
