--- a/index.html
+++ b/index.html
@@ -36,36 +36,13 @@
         </main>
     </section>
 
-    <!-- <nav class="navbar navbar-expand-md bg-body-transparent sticky-top mynavbar">
-      <div class="container">
-        <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link" href="#hero"><i class="bi bi-house"></i></a>
-              <a class="nav-link" href="#home"><i class="bi bi-people"></i></a>
-              <a class="nav-link" href="#info"><i class="bi bi-calendar-check"></i></a>
-              <a class="nav-link" href="#gallery"><i class="bi bi-image"></i></a>
-              <a class="nav-link" href="#rsvp"><i class="bi bi-box2-heart"></i></a>
-              <a class="nav-link" href="#disqus_thread"><i class="bi bi-chat"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav> -->
-
     <nav class="bottom-nav" id="bottomNav">
       <a href="#hero"><i class="bi bi-house"></i></a>
       <a href="#home"><i class="bi bi-people"></i></a>
       <a href="#info"><i class="bi bi-calendar-check"></i></a>
       <a href="#gallery"><i class="bi bi-image"></i></a>
-      <a href="#rsvp"><i class="bi bi-box2-heart"></i></a>
-      <a href="#disqus_thread"><i class="bi bi-chat"></i></a>
+      <a href="#rsvp"><i class="bi bi-envelope-paper-heart"></i></a>
+      <a href="#gift"><i class="bi bi-chat"></i></a>
     </nav>
 
     <section id="introduction" class="introduction">
@@ -95,8 +72,8 @@
               <i class="bi bi-heart-fill"></i>
               <span></span>
             </div>
-            <h3 class="fade-in fade-in-delay-3">Diselenggarakan pada 28 Desember 2025 di Desa Citta, Kecamatan Citta, Kabupaten Soppeng.</h3>
-            <p class="fade-in fade-in-delay-4">Oleh karena itu, dengan segala hormat kami bermaksud untuk mengundang Bapak/Ibu Saudara/i, untuk hadir pada pernikahan kami.</p>
+            <h3 class="fade-in fade-in-delay-3">Assalamu'alaikum Warahmatullahi Wabarakatuh</h3>
+            <p class="fade-in fade-in-delay-4">Dengan memohon Rahmat dan Ridho Allah SWT kami bermaksud untuk mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara pernikahan kami:</p>
           </div>
         </div>
       </div>
@@ -110,7 +87,7 @@
             <div class="couple-info">
               <h3>Usman Sidiq</h3>
               <p class="couple-title">Mempelai Pria</p>
-              <p>Putra bungsu dari<br>Bpk. H.M.Zainuddin & Ibu Hj. Muhaidah</p>
+              <p>Putra bungsu (kelima) dari<br>Bpk. (Alm) H.M.Zainuddin & Ibu Hj. Muhaidah</p>
             </div>
           </div>
         </div>
@@ -127,7 +104,7 @@
             <div class="couple-info">
               <h3>Nadhila Sari</h3>
               <p class="couple-title">Mempelai Wanita</p>
-              <p>Putri bungsu dari<br>Bpk. H. Ismail & Ibu Hj. Lete</p>
+              <p>Putri bungsu (ketiga) dari<br>Bpk. (Alm) H. Ismail & Ibu Hj. Lete</p>
             </div>
           </div>
         </div>
@@ -144,7 +121,7 @@
               <i class="bi bi-heart-fill"></i>
               <span></span>
             </div>
-            <p class="alamat fade-in fade-in-delay-3">Kediaman Alm. Bapak H. Muhammad Zainuddin (Mantan Imam Kecamatan Citta), Sebelah Utara Pasar Citta, Desa Citta, Kecamatan Citta, Kabupaten Soppeng</p>
+            <p class="alamat fade-in fade-in-delay-3">Sebelah Utara Lapangan A. Balli Talebba, Desa Citta, Kecamatan Citta, Kabupaten Soppeng</p>
             <div class="map-wrapper fade-in fade-in-up">
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d994.4734439723935!2d120.0304849!3d-4.4308821!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dbe03942f7be319%3A0x2f3b55d002f5464!2sApotek%20Usman%20Farma!5e0!3m2!1sen!2sid!4v1765851216248!5m2!1sen!2sid" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -163,7 +140,7 @@
               <div class="event-icon">
                 <i class="bi bi-heart"></i>
               </div>
-              <h4>Akad Nikah</h4>
+              <h4>Resepsi</h4>
               <div class="event-details">
                 <div class="event-detail">
                   <i class="bi bi-calendar-heart"></i>
@@ -171,10 +148,9 @@
                 </div>
                 <div class="event-detail">
                   <i class="bi bi-clock"></i>
-                  <span>08.00 - 10.00 WITA</span>
+                  <span>10.00 WITA - Selesai </span>
                 </div>
               </div>
-              <p class="event-note">Mohon untuk menjaga kekhidmatan acara</p>
             </div>
           </div>
         </div>
@@ -192,7 +168,6 @@
               <i class="bi bi-heart-fill"></i>
               <span></span>
             </div>
-            <p class="fade-in fade-in-delay-3">Momen-momen indah perjalanan kisah cinta kami</p>
           </div>
         </div>
 
@@ -316,9 +291,9 @@
                 <i class="bi bi-bank"></i>
               </div>
               <h5>Bank BSI</h5>
-              <p class="gift-account">0313861411</p>
+              <p class="gift-account">7233178866</p>
               <p class="gift-name">a.n. Usman Sidiq</p>
-              <button class="btn btn-copy" onclick="copyToClipboard('0313861411')">
+              <button class="btn btn-copy" onclick="copyToClipboard('7233178866')">
                 <i class="bi bi-clipboard me-2"></i>Salin Nomor
               </button>
             </div>
