--- a/index.html
+++ b/index.html
@@ -205,8 +205,40 @@
             </a>
           </div>
           <div class="col fade-in fade-in-up fade-in-delay-4">
-            <a href="img/gallery/5.avif" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
+            <a href="img/gallery/5.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
               <img src="img/gallery/thumbnail/5.jpg" alt="Sidiq & Nana 5" class="img-fluid w-100">
+              <div class="gallery-overlay">
+                <i class="bi bi-zoom-in"></i>
+              </div>
+            </a>
+          </div>
+          <div class="col fade-in fade-in-up fade-in-delay-5">
+            <a href="img/gallery/6.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
+              <img src="img/gallery/thumbnail/6.jpg" alt="Sidiq & Nana 6" class="img-fluid w-100">
+              <div class="gallery-overlay">
+                <i class="bi bi-zoom-in"></i>
+              </div>
+            </a>
+          </div>
+          <div class="col fade-in fade-in-up fade-in-delay-6">
+            <a href="img/gallery/7.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
+              <img src="img/gallery/thumbnail/7.jpg" alt="Sidiq & Nana 7" class="img-fluid w-100">
+              <div class="gallery-overlay">
+                <i class="bi bi-zoom-in"></i>
+              </div>
+            </a>
+          </div>
+          <div class="col fade-in fade-in-up fade-in-delay-7">
+            <a href="img/gallery/8.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
+              <img src="img/gallery/thumbnail/8.jpg" alt="Sidiq & Nana 8" class="img-fluid w-100">
+              <div class="gallery-overlay">
+                <i class="bi bi-zoom-in"></i>
+              </div>
+            </a>
+          </div>
+          <div class="col fade-in fade-in-up fade-in-delay-8">
+            <a href="img/gallery/9.jpg" data-toggle="lightbox" data-caption="Sidiq & Nana" data-gallery="prewed-gallery" class="gallery-item">
+              <img src="img/gallery/thumbnail/9.jpg" alt="Sidiq & Nana 9" class="img-fluid w-100">
               <div class="gallery-overlay">
                 <i class="bi bi-zoom-in"></i>
               </div>
