--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sidiq & Nana Wedding Invitation</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri pernikahan Usman Sidiq & Nadhila Sari pada 28 Desember 2025">
+
+    <!-- Open Graph / Facebook / WhatsApp -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://www.seedsider.blog">
+    <meta property="og:title" content="Undangan Pernikahan Sidiq & Nana">
+    <meta property="og:description" content="Kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri pernikahan kami pada 28 Desember 2025">
+    <meta property="og:image" content="http://www.seedsider.blog/img/thumbnail.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Undangan Pernikahan Sidiq & Nana">
+    <meta name="twitter:description" content="Kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri pernikahan kami pada 28 Desember 2025">
+    <meta name="twitter:image" content="http://www.seedsider.blog/img/thumbnail.jpg">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
